# OSMScout-ubuntu

./: README  build-src-package.sh
Import/: Makefile.am  configure.ac
OSMScout/: OSMScout.pro
OSMScout/Import/: Makefile.am  osmscout-import
OSMScout/Import/debian/: changelog  control
OSMScout/Import/src/: Makefile.am
OSMScout/ImportGui/: Makefile.am  OSMScoutImport.desktop  OSMScoutImportGui.cbp  configure.ac
OSMScout/ImportGui/debian/: changelog  control
OSMScout/ImportGui/po/: POTFILES.in
OSMScout/ImportGui/src/: Makefile.am  MapImportFrame.cpp  MapImportFrame.h  MapImportFrameBase.cpp  MapImportFrameBase.h  OSMMapImport.fbp  main.cpp  main.h
OSMScout/OSMScout/: OSMScout.apparmor  OSMScout.apparmor.openstore  OSMScout.desktop  OSMScout.pro  manifest.json.in  res.qrc
OSMScout/OSMScout/po/: osmscout_de.po  osmscout_de.qm  osmscout_nl.po  osmscout_nl.qm  osmscout_pl.po  osmscout_pl.qm
OSMScout/OSMScout/qml/: AboutDialog.qml  DownloadMapDialog.qml  FavouritesChoserDialog.qml  FavouritesDialog.qml  RoutingDialog.qml  SearchDialog.qml  SettingsDialog.qml  main.qml
OSMScout/OSMScout/qml/custom/: ConfirmationDialog.qml  DialogActionButton.qml  LineEdit.qml  ListItemWithActions.qml  LocationEdit.qml  LocationSearch.qml  MapButton.qml  MapDialog.qml
OSMScout/OSMScout/src/: DBThread.cpp  DBThread.h  DownloadDirListModel.cpp  DownloadDirListModel.h  DownloadListModel.cpp  DownloadListModel.h  MapListModel.cpp  MapListModel.h  MapWidget.cpp  MapWidget.h  OSMScout.cpp  RoutingModel.cpp  RoutingModel.h  SearchLocationModel.cpp  SearchLocationModel.h  Settings.cpp  Settings.h  Theme.cpp  UnityScreen.cpp  UnityScreen.h  downloadmanager.cpp  downloadmanager.h  downloadmanagerHTTP.cpp  downloadmanagerHTTP.h
OSMScout/libosmscout-import/debian/: changelog  control  rules  symbols
OSMScout/libosmscout-import/include/osmscout/import/: PreprocessOSM.h
OSMScout/libosmscout-map/include/osmscout/: MapFeatures.h
OSMScout/libosmscout/debian/: changelog  control  rules  symbols
OSMScout/libosmscout/include/osmscout/: CoreFeatures.h  LocationIndex.h  WaterIndex.h
OSMScout/libosmscout/src/osmscout/: Database.cpp  LocationIndex.cpp  LocationService.cpp  RoutePostprocessor.cpp  WaterIndex.cpp
OSMScout2/: OSMScout.apparmor  OSMScout.pro  manifest.json.in  res.qrc
OSMScout2/qml/: DownloadMapDialog.qml  RoutingDialog.qml  SearchDialog.qml  main.qml
OSMScout2/qml/custom/: DialogActionButton.qml  MapButton.qml
OSMScout2/src/: DBThread.cpp  DBThread.h  MapWidget.cpp  MapWidget.h  Theme.cpp
libosmscout/: libosmscout.pro
libosmscout-map/: libosmscout-map.pro
libosmscout-map-qt/: libosmscout-map-qt.pro
libosmscout-map-qt/include/osmscout/: MapQtFeatures.h
libosmscout/include/osmscout/private/: Config.h
(+8 files in other folders)
